# dsBot-rs

./: .env  .gitignore  Cargo.toml
src/: .env  commands.rs  main.rs
src/voice/: voice.rs
